[gd_scene load_steps=3 format=3 uid="uid://bknsfp7nfgph5"]

[ext_resource type="Script" path="res://pq/Scripts/authentication.gd" id="1_jm433"]
[ext_resource type="Texture2D" uid="uid://3eyyo6h2t8qo" path="res://pq/loginbg.jpg" id="2_cl7bg"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jm433")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(575, 324.5)
scale = Vector2(0.384, 0.3245)
texture = ExtResource("2_cl7bg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -155.0
offset_right = 196.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Not logged in"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FirstNameEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "First Name"

[node name="LastNameEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Last Name"

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log in"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
